Update UKF codes

--- a/UKF_multi_imu.ipynb
+++ b/UKF_multi_imu.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 835,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 836,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 837,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 838,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,8 +63,15 @@
     "    Ahat = np.array([[0, -a[2], a[1]],\n",
     "                    [a[2], 0, -a[0]],\n",
     "                    [-a[1], a[0], 0]])\n",
-    "    return Ahat\n",
-    "\n",
+    "    return Ahat"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def measurement(state, pos_r, Rb_si, WN, num_imus):\n",
     "    meas = np.zeros(6*num_imus)\n",
     "    for i in range(num_imus):\n",
@@ -73,11 +80,13 @@
     "        sf = state[6:9]\n",
     "        omega = state[0:3]\n",
     "        omega_dot = state[3:6]\n",
-    "        RW_sub = state[9+i:15+6*i]\n",
+    "        RW_sub = state[9+6*i:15+6*i]\n",
     "        s_i = Rb_si_sub @ (sf + wedge(omega) @ wedge(omega) @ r_sub + wedge(omega_dot) @ r_sub + WN[i*num_imus:3+i*num_imus]*np.random.randn(3)) + RW_sub[0:3]\n",
     "        omega_i = Rb_si_sub @ omega + WN[3+i*num_imus:6+i*num_imus]*np.random.randn(3) + RW_sub[3:6]\n",
     "        meas[i*6:6+i*6] = np.concatenate((s_i, omega_i))\n",
     "    return meas\n",
+    "\n",
+    "\n",
     "\n",
     "\n",
     "def measurement_est(state_input, pos_r, Rb_si, num_imus):\n",
@@ -90,7 +99,7 @@
     "            sf = state[6:9]\n",
     "            omega = state[0:3]\n",
     "            omega_dot = state[3:6]\n",
-    "            RW_sub = state[9+i:15+6*i]\n",
+    "            RW_sub = state[9+6*i:15+6*i]\n",
     "            s_i = Rb_si_sub @ (sf + wedge(omega) @ wedge(omega) @ r_sub + wedge(omega_dot) @ r_sub) + RW_sub[0:3]\n",
     "            omega_i = Rb_si_sub @ omega + RW_sub[3:6]\n",
     "            meas[i*6:6+i*6, j] = np.concatenate((s_i, omega_i))\n",
@@ -100,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 839,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 840,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 841,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -207,9 +216,7 @@
      "text": [
       "0\n",
       "True\n",
-      "True\n",
       "1\n",
-      "True\n",
       "True\n",
       "2\n"
      ]
@@ -221,8 +228,8 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mLinAlgError\u001b[0m                               Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[841], line 42\u001b[0m\n\u001b[1;32m     40\u001b[0m meas \u001b[38;5;241m=\u001b[39m measurements[i]\n\u001b[1;32m     41\u001b[0m meas_hist[i] \u001b[38;5;241m=\u001b[39m meas\n\u001b[0;32m---> 42\u001b[0m state_est, Cov_est \u001b[38;5;241m=\u001b[39m \u001b[43mUKF_disi\u001b[49m\u001b[43m(\u001b[49m\u001b[43mstate\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mCov_est\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mR\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mQ\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmeas\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdt\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mpos_r\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mRb_si\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnum_imus\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     43\u001b[0m state_est_hist[i] \u001b[38;5;241m=\u001b[39m state_est\n",
-      "Cell \u001b[0;32mIn[839], line 11\u001b[0m, in \u001b[0;36mUKF_disi\u001b[0;34m(state, Cov, R, Q, y_meas, dt, pos_r, Rb_si, num_imus)\u001b[0m\n\u001b[1;32m      9\u001b[0m Particles[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m=\u001b[39m state\n\u001b[1;32m     10\u001b[0m param_lambda \u001b[38;5;241m=\u001b[39m alpha\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m2\u001b[39m\u001b[38;5;241m*\u001b[39m(n\u001b[38;5;241m+\u001b[39mkappa)\u001b[38;5;241m-\u001b[39mn \u001b[38;5;66;03m# labmda is a parameter for pertubing the states\u001b[39;00m\n\u001b[0;32m---> 11\u001b[0m delx \u001b[38;5;241m=\u001b[39m \u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mlinalg\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcholesky\u001b[49m\u001b[43m(\u001b[49m\u001b[43m(\u001b[49m\u001b[43mn\u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43mparam_lambda\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mCov\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     12\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(n):\n\u001b[1;32m     13\u001b[0m \tParticles[i\u001b[38;5;241m+\u001b[39m\u001b[38;5;241m1\u001b[39m] \u001b[38;5;241m=\u001b[39m state \u001b[38;5;241m+\u001b[39m delx[i]\n",
+      "Cell \u001b[0;32mIn[21], line 42\u001b[0m\n\u001b[1;32m     40\u001b[0m meas \u001b[38;5;241m=\u001b[39m measurements[i]\n\u001b[1;32m     41\u001b[0m meas_hist[i] \u001b[38;5;241m=\u001b[39m meas\n\u001b[0;32m---> 42\u001b[0m state_est, Cov_est \u001b[38;5;241m=\u001b[39m \u001b[43mUKF_disi\u001b[49m\u001b[43m(\u001b[49m\u001b[43mstate\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mCov_est\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mR\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mQ\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmeas\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdt\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mpos_r\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mRb_si\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnum_imus\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     43\u001b[0m state_est_hist[i] \u001b[38;5;241m=\u001b[39m state_est\n",
+      "Cell \u001b[0;32mIn[19], line 11\u001b[0m, in \u001b[0;36mUKF_disi\u001b[0;34m(state, Cov, R, Q, y_meas, dt, pos_r, Rb_si, num_imus)\u001b[0m\n\u001b[1;32m      9\u001b[0m Particles[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m=\u001b[39m state\n\u001b[1;32m     10\u001b[0m param_lambda \u001b[38;5;241m=\u001b[39m alpha\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m2\u001b[39m\u001b[38;5;241m*\u001b[39m(n\u001b[38;5;241m+\u001b[39mkappa)\u001b[38;5;241m-\u001b[39mn \u001b[38;5;66;03m# labmda is a parameter for pertubing the states\u001b[39;00m\n\u001b[0;32m---> 11\u001b[0m delx \u001b[38;5;241m=\u001b[39m \u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mlinalg\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcholesky\u001b[49m\u001b[43m(\u001b[49m\u001b[43m(\u001b[49m\u001b[43mn\u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43mparam_lambda\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mCov\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     12\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(n):\n\u001b[1;32m     13\u001b[0m \tParticles[i\u001b[38;5;241m+\u001b[39m\u001b[38;5;241m1\u001b[39m] \u001b[38;5;241m=\u001b[39m state \u001b[38;5;241m+\u001b[39m delx[i]\n",
       "File \u001b[0;32m<__array_function__ internals>:200\u001b[0m, in \u001b[0;36mcholesky\u001b[0;34m(*args, **kwargs)\u001b[0m\n",
       "File \u001b[0;32m~/.local/lib/python3.8/site-packages/numpy/linalg/linalg.py:756\u001b[0m, in \u001b[0;36mcholesky\u001b[0;34m(a)\u001b[0m\n\u001b[1;32m    754\u001b[0m t, result_t \u001b[38;5;241m=\u001b[39m _commonType(a)\n\u001b[1;32m    755\u001b[0m signature \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mD->D\u001b[39m\u001b[38;5;124m'\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m isComplexType(t) \u001b[38;5;28;01melse\u001b[39;00m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124md->d\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[0;32m--> 756\u001b[0m r \u001b[38;5;241m=\u001b[39m \u001b[43mgufunc\u001b[49m\u001b[43m(\u001b[49m\u001b[43ma\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msignature\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43msignature\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mextobj\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mextobj\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    757\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m wrap(r\u001b[38;5;241m.\u001b[39mastype(result_t, copy\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m))\n",
       "File \u001b[0;32m~/.local/lib/python3.8/site-packages/numpy/linalg/linalg.py:92\u001b[0m, in \u001b[0;36m_raise_linalgerror_nonposdef\u001b[0;34m(err, flag)\u001b[0m\n\u001b[1;32m     91\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m_raise_linalgerror_nonposdef\u001b[39m(err, flag):\n\u001b[0;32m---> 92\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m LinAlgError(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mMatrix is not positive definite\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
