--- a/UKF_multi_imu.ipynb
+++ b/UKF_multi_imu.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,15 +10,17 @@
     "import random\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
+    "import scipy\n",
     "from scipy.spatial.transform import Rotation as R\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
+    "from tqdm import trange\n",
     "%matplotlib inline"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,9 +87,6 @@
     "        omega_i = Rb_si_sub @ omega + WN[3+i*num_imus:6+i*num_imus]*np.random.randn(3) + RW_sub[3:6]\n",
     "        meas[i*6:6+i*6] = np.concatenate((s_i, omega_i))\n",
     "    return meas\n",
-    "\n",
-    "\n",
-    "\n",
     "\n",
     "def measurement_est(state_input, pos_r, Rb_si, num_imus):\n",
     "    meas = np.zeros((6*num_imus, len(state_input)))\n",
@@ -109,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,10 +122,11 @@
     "\tParticles = np.zeros((2*n+1, n))\n",
     "\tParticles[0] = state\n",
     "\tparam_lambda = alpha**2*(n+kappa)-n # labmda is a parameter for pertubing the states\n",
-    "\tdelx = np.linalg.cholesky((n+param_lambda)*Cov)\n",
+    "\t# delx = np.linalg.cholesky((n+param_lambda)*Cov)\n",
+    "\tdelx = scipy.linalg.sqrtm((n+param_lambda)*Cov)\n",
     "\tfor i in range(n):\n",
-    "\t\tParticles[i+1] = state + delx[i]\n",
-    "\t\tParticles[n+i+1] = state - delx[i]\n",
+    "\t\tParticles[i+1] = state + delx[i].real\n",
+    "\t\tParticles[n+i+1] = state - delx[i].real\n",
     "\n",
     "\t# Propagate the particles according to discrete time dynamics (2n+1 particles)\n",
     "\tParticles_prior = dynamics_est(dt, Particles, num_imus)\n",
@@ -156,8 +156,8 @@
     "\tParticles_rev = np.zeros((2*n+1, n))\n",
     "\tParticles_rev[0] = state_prior\n",
     "\tfor i in range(n):\n",
-    "\t\tParticles_rev[i+1] = state + delx[i]\n",
-    "\t\tParticles_rev[n+i+1] = state - delx[i]\n",
+    "\t\tParticles_rev[i+1] = state + delx[i].real\n",
+    "\t\tParticles_rev[n+i+1] = state - delx[i].real\n",
     "\n",
     "\t# Predict measurements for each particle\n",
     "\tY_part = measurement_est(Particles_rev, pos_r, Rb_si, num_imus)\n",
@@ -172,7 +172,7 @@
     "\t\tS = S + wi_mc * y_diff_col @ y_diff_row\n",
     "\t\t# S = S + wi_mc*(Y_part[i] - y_hat)*(Y_part[i] - y_hat).T\n",
     "\tS = S + Q\n",
-    "\tprint(np.allclose(S, S.T))\n",
+    "\t# print(np.allclose(S, S.T))\n",
     "\n",
     "\t# Determine the cross-covariance between the state and observation\n",
     "\tSig_xz = np.zeros((len(state_prior),len(y_hat)))\n",
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,33 +207,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "0\n",
-      "True\n",
-      "1\n",
-      "True\n",
-      "2\n"
+      "  0%|          | 0/36000 [00:00<?, ?it/s]/tmp/ipykernel_2311760/2777488791.py:14: ComplexWarning: Casting complex values to real discards the imaginary part\n",
+      "  Particles[i+1] = state + delx[i]\n",
+      "/tmp/ipykernel_2311760/2777488791.py:15: ComplexWarning: Casting complex values to real discards the imaginary part\n",
+      "  Particles[n+i+1] = state - delx[i]\n",
+      "  5%|▌         | 1837/36000 [00:27<08:33, 66.58it/s] \n"
      ]
     },
     {
-     "ename": "LinAlgError",
-     "evalue": "Matrix is not positive definite",
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mLinAlgError\u001b[0m                               Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[21], line 42\u001b[0m\n\u001b[1;32m     40\u001b[0m meas \u001b[38;5;241m=\u001b[39m measurements[i]\n\u001b[1;32m     41\u001b[0m meas_hist[i] \u001b[38;5;241m=\u001b[39m meas\n\u001b[0;32m---> 42\u001b[0m state_est, Cov_est \u001b[38;5;241m=\u001b[39m \u001b[43mUKF_disi\u001b[49m\u001b[43m(\u001b[49m\u001b[43mstate\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mCov_est\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mR\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mQ\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmeas\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdt\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mpos_r\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mRb_si\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnum_imus\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     43\u001b[0m state_est_hist[i] \u001b[38;5;241m=\u001b[39m state_est\n",
-      "Cell \u001b[0;32mIn[19], line 11\u001b[0m, in \u001b[0;36mUKF_disi\u001b[0;34m(state, Cov, R, Q, y_meas, dt, pos_r, Rb_si, num_imus)\u001b[0m\n\u001b[1;32m      9\u001b[0m Particles[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m=\u001b[39m state\n\u001b[1;32m     10\u001b[0m param_lambda \u001b[38;5;241m=\u001b[39m alpha\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m2\u001b[39m\u001b[38;5;241m*\u001b[39m(n\u001b[38;5;241m+\u001b[39mkappa)\u001b[38;5;241m-\u001b[39mn \u001b[38;5;66;03m# labmda is a parameter for pertubing the states\u001b[39;00m\n\u001b[0;32m---> 11\u001b[0m delx \u001b[38;5;241m=\u001b[39m \u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mlinalg\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcholesky\u001b[49m\u001b[43m(\u001b[49m\u001b[43m(\u001b[49m\u001b[43mn\u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43mparam_lambda\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mCov\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     12\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(n):\n\u001b[1;32m     13\u001b[0m \tParticles[i\u001b[38;5;241m+\u001b[39m\u001b[38;5;241m1\u001b[39m] \u001b[38;5;241m=\u001b[39m state \u001b[38;5;241m+\u001b[39m delx[i]\n",
-      "File \u001b[0;32m<__array_function__ internals>:200\u001b[0m, in \u001b[0;36mcholesky\u001b[0;34m(*args, **kwargs)\u001b[0m\n",
-      "File \u001b[0;32m~/.local/lib/python3.8/site-packages/numpy/linalg/linalg.py:756\u001b[0m, in \u001b[0;36mcholesky\u001b[0;34m(a)\u001b[0m\n\u001b[1;32m    754\u001b[0m t, result_t \u001b[38;5;241m=\u001b[39m _commonType(a)\n\u001b[1;32m    755\u001b[0m signature \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mD->D\u001b[39m\u001b[38;5;124m'\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m isComplexType(t) \u001b[38;5;28;01melse\u001b[39;00m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124md->d\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[0;32m--> 756\u001b[0m r \u001b[38;5;241m=\u001b[39m \u001b[43mgufunc\u001b[49m\u001b[43m(\u001b[49m\u001b[43ma\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msignature\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43msignature\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mextobj\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mextobj\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    757\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m wrap(r\u001b[38;5;241m.\u001b[39mastype(result_t, copy\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m))\n",
-      "File \u001b[0;32m~/.local/lib/python3.8/site-packages/numpy/linalg/linalg.py:92\u001b[0m, in \u001b[0;36m_raise_linalgerror_nonposdef\u001b[0;34m(err, flag)\u001b[0m\n\u001b[1;32m     91\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m_raise_linalgerror_nonposdef\u001b[39m(err, flag):\n\u001b[0;32m---> 92\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m LinAlgError(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mMatrix is not positive definite\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "\u001b[0;31mLinAlgError\u001b[0m: Matrix is not positive definite"
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[8], line 41\u001b[0m\n\u001b[1;32m     39\u001b[0m meas \u001b[38;5;241m=\u001b[39m measurements[i]\n\u001b[1;32m     40\u001b[0m meas_hist[i] \u001b[38;5;241m=\u001b[39m meas\n\u001b[0;32m---> 41\u001b[0m state_est, Cov_est \u001b[38;5;241m=\u001b[39m \u001b[43mUKF_disi\u001b[49m\u001b[43m(\u001b[49m\u001b[43mstate\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mCov_est\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mR\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mQ\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmeas\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdt\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mpos_r\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mRb_si\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnum_imus\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     42\u001b[0m state_est_hist[i] \u001b[38;5;241m=\u001b[39m state_est\n",
+      "Cell \u001b[0;32mIn[6], line 49\u001b[0m, in \u001b[0;36mUKF_disi\u001b[0;34m(state, Cov, R, Q, y_meas, dt, pos_r, Rb_si, num_imus)\u001b[0m\n\u001b[1;32m     46\u001b[0m \tParticles_rev[n\u001b[38;5;241m+\u001b[39mi\u001b[38;5;241m+\u001b[39m\u001b[38;5;241m1\u001b[39m] \u001b[38;5;241m=\u001b[39m state \u001b[38;5;241m-\u001b[39m delx[i]\u001b[38;5;241m.\u001b[39mreal\n\u001b[1;32m     48\u001b[0m \u001b[38;5;66;03m# Predict measurements for each particle\u001b[39;00m\n\u001b[0;32m---> 49\u001b[0m Y_part \u001b[38;5;241m=\u001b[39m \u001b[43mmeasurement_est\u001b[49m\u001b[43m(\u001b[49m\u001b[43mParticles_rev\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mpos_r\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mRb_si\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnum_imus\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     51\u001b[0m \u001b[38;5;66;03m# Compute weighted measurement mean and covariance\u001b[39;00m\n\u001b[1;32m     52\u001b[0m y_hat \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39msum(wi_mc\u001b[38;5;241m*\u001b[39mY_part, axis\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m)\n",
+      "Cell \u001b[0;32mIn[5], line 28\u001b[0m, in \u001b[0;36mmeasurement_est\u001b[0;34m(state_input, pos_r, Rb_si, num_imus)\u001b[0m\n\u001b[1;32m     26\u001b[0m         s_i \u001b[38;5;241m=\u001b[39m Rb_si_sub \u001b[38;5;241m@\u001b[39m (sf \u001b[38;5;241m+\u001b[39m wedge(omega) \u001b[38;5;241m@\u001b[39m wedge(omega) \u001b[38;5;241m@\u001b[39m r_sub \u001b[38;5;241m+\u001b[39m wedge(omega_dot) \u001b[38;5;241m@\u001b[39m r_sub) \u001b[38;5;241m+\u001b[39m RW_sub[\u001b[38;5;241m0\u001b[39m:\u001b[38;5;241m3\u001b[39m]\n\u001b[1;32m     27\u001b[0m         omega_i \u001b[38;5;241m=\u001b[39m Rb_si_sub \u001b[38;5;241m@\u001b[39m omega \u001b[38;5;241m+\u001b[39m RW_sub[\u001b[38;5;241m3\u001b[39m:\u001b[38;5;241m6\u001b[39m]\n\u001b[0;32m---> 28\u001b[0m         meas[i\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m6\u001b[39m:\u001b[38;5;241m6\u001b[39m\u001b[38;5;241m+\u001b[39mi\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m6\u001b[39m, j] \u001b[38;5;241m=\u001b[39m \u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mconcatenate\u001b[49m\u001b[43m(\u001b[49m\u001b[43m(\u001b[49m\u001b[43ms_i\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43momega_i\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     30\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m meas\n",
+      "File \u001b[0;32m<__array_function__ internals>:180\u001b[0m, in \u001b[0;36mconcatenate\u001b[0;34m(*args, **kwargs)\u001b[0m\n",
+      "File \u001b[0;32m~/.local/lib/python3.8/site-packages/numpy/core/multiarray.py:152\u001b[0m, in \u001b[0;36mconcatenate\u001b[0;34m(arrays, axis, out, dtype, casting)\u001b[0m\n\u001b[1;32m     86\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m     87\u001b[0m \u001b[38;5;124;03m    empty_like(prototype, dtype=None, order='K', subok=True, shape=None)\u001b[39;00m\n\u001b[1;32m     88\u001b[0m \n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    147\u001b[0m \n\u001b[1;32m    148\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[1;32m    149\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m (prototype,)\n\u001b[0;32m--> 152\u001b[0m \u001b[38;5;129m@array_function_from_c_func_and_dispatcher\u001b[39m(_multiarray_umath\u001b[38;5;241m.\u001b[39mconcatenate)\n\u001b[1;32m    153\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mconcatenate\u001b[39m(arrays, axis\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m, out\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m, \u001b[38;5;241m*\u001b[39m, dtype\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m, casting\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m):\n\u001b[1;32m    154\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m    155\u001b[0m \u001b[38;5;124;03m    concatenate((a1, a2, ...), axis=0, out=None, dtype=None, casting=\"same_kind\")\u001b[39;00m\n\u001b[1;32m    156\u001b[0m \n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    244\u001b[0m \n\u001b[1;32m    245\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[1;32m    246\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m out \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m    247\u001b[0m         \u001b[38;5;66;03m# optimize for the typical case where only arrays is provided\u001b[39;00m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
@@ -273,8 +273,7 @@
     "Q = np.diag(WN**2)\n",
     "Cov_est = 1e-4*np.eye(9+6*num_imus)\n",
     "\n",
-    "for i in range(len(time)):\n",
-    "    print(i)\n",
+    "for i in trange(len(time)):\n",
     "    state_hist[i] = state\n",
     "    state = dynamics(dt, state, RW, w_input_noise, a_input_noise, num_imus)\n",
     "    meas = measurements[i]\n",
