[ADD] update allan variance plotting

--- a/code/EKF_multi_imu.ipynb
+++ b/code/EKF_multi_imu.ipynb
@@ -9,6 +9,8 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from tqdm import trange\n",
+    "import allan_variance\n",
+    "\n",
     "%matplotlib inline"
    ]
   },
@@ -209,6 +211,67 @@
     "    P_est = np.dot(np.eye(len(P_est))- np.dot(K,H), P_pred)\n",
     "    meas_hist[i] = meas\n",
     "    state_est_hist[i] = state_est"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# system, omega hat\n",
+    "tau_wx, avar_wx = allan_variance.compute_avar(state_est_hist[:,0], dt)\n",
+    "tau_wy, avar_wy = allan_variance.compute_avar(state_est_hist[:,1], dt)\n",
+    "tau_wz, avar_wz = allan_variance.compute_avar(state_est_hist[:,2], dt)\n",
+    "params_wx, avar_pred_wx = allan_variance.estimate_parameters(tau_wx, avar_wx)\n",
+    "params_wy, avar_pred_wy = allan_variance.estimate_parameters(tau_wy, avar_wy)\n",
+    "params_wz, avar_pred_wz = allan_variance.estimate_parameters(tau_wz, avar_wz)\n",
+    "\n",
+    "# Computed\n",
+    "plt.loglog(tau_wx, avar_pred_wx, label=\"$\\hat{\\omega}_x$\", linewidth=5, color = \"#0060B0\")\n",
+    "plt.loglog(tau_wy, avar_pred_wx, label=\"$\\hat{\\omega}_y$\", linewidth=5, color = \"#723255\")\n",
+    "plt.loglog(tau_wz, avar_pred_wx, label=\"$\\hat{\\omega}_z$\", linewidth=5, color = \"#EC9F06\")\n",
+    "# Estimated\n",
+    "plt.loglog(tau_wx, avar_wx, '.', label=\"$\\hat{\\omega}_x$\", linewidth=5, color = \"#0060B0\")\n",
+    "plt.loglog(tau_wy, avar_wy, '.', label=\"$\\hat{\\omega}_y$\", linewidth=5, color = \"#723255\")\n",
+    "plt.loglog(tau_wz, avar_wz, '.', label=\"$\\hat{\\omega}_z$\", linewidth=5, color = \"#EC9F06\")\n",
+    "\n",
+    "line1, = plt.plot([], [], color='k', linestyle=\"-\", alpha=0.7, linewidth=5, label='Computed')\n",
+    "line2, = plt.plot([], [], color='k', linestyle=\"dotted\", alpha=0.7, linewidth=5, label='Estimated with model parameters')\n",
+    "\n",
+    "plt.legend(ncol=3, fancybox=True, frameon=True, fontsize=8, loc='upper right')\n",
+    "plt.xlabel(\"Averaging time (s)\")\n",
+    "plt.ylabel(\"Allan Variance ($\\hat{\\omega}$)\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tau_fx, avar_fx = allan_variance.compute_avar(state_est_hist[:,6], dt)\n",
+    "tau_fy, avar_fy = allan_variance.compute_avar(state_est_hist[:,7], dt)\n",
+    "tau_fz, avar_fz = allan_variance.compute_avar(state_est_hist[:,8], dt)\n",
+    "params_fx, avar_pred_fx = allan_variance.estimate_parameters(tau_fx, avar_fx)\n",
+    "params_fy, avar_pred_fy = allan_variance.estimate_parameters(tau_fy, avar_fy)\n",
+    "params_fz, avar_pred_fz = allan_variance.estimate_parameters(tau_fz, avar_fz)\n",
+    "\n",
+    "# Computed\n",
+    "plt.loglog(tau_fx, avar_pred_fx, label=\"$\\hat{SF}_x$\", linewidth=5, color = \"#0060B0\")\n",
+    "plt.loglog(tau_fy, avar_pred_fy, label=\"$\\hat{SF}_y$\", linewidth=5, color = \"#723255\")\n",
+    "plt.loglog(tau_fz, avar_pred_fz, label=\"$\\hat{SF}_z$\", linewidth=5, color = \"#EC9F06\")\n",
+    "# Estimated\n",
+    "plt.loglog(tau_fx, avar_fx, '.', label=\"$\\hat{SF}_x$\", linewidth=5, color = \"#0060B0\")\n",
+    "plt.loglog(tau_fy, avar_fy, '.', label=\"$\\hat{SF}_y$\", linewidth=5, color = \"#723255\")\n",
+    "plt.loglog(tau_fz, avar_fz, '.', label=\"$\\hat{SF}_z$\", linewidth=5, color = \"#EC9F06\")\n",
+    "\n",
+    "line1, = plt.plot([], [], color='k', linestyle=\"-\", alpha=0.7, linewidth=5, label='Computed')\n",
+    "line2, = plt.plot([], [], color='k', linestyle=\"dotted\", alpha=0.7, linewidth=5, label='Estimated with model parameters')\n",
+    "\n",
+    "plt.legend(ncol=3, fancybox=True, frameon=True, fontsize=8, loc='upper right')\n",
+    "plt.xlabel(\"Averaging time (s)\")\n",
+    "plt.ylabel(\"Allan Variance ($\\hat{SF}$)\")"
    ]
   },
   {
