[WIP] fixed SFhat dynamics_est in EKF notebook, omega hat in both notebooks and SFhat in UKF notebook still not as expected

--- a/code/gen_imu_data.ipynb
+++ b/code/gen_imu_data.ipynb
@@ -95,7 +95,7 @@
     "accelerometer_vrw = 0.008 # m / s / sqrt(Hr)\n",
     "WN_STD = np.hstack((gyroscope_wn*np.ones(3*num_imus), accelerometer_wn*np.ones(3*num_imus)))\n",
     "\n",
-    "time = np.arange(0, 360, 0.01)\n",
+    "time = np.arange(0, 360, dt)\n",
     "state = np.zeros(9 + 6*num_imus)\n",
     "state[0:3] = omega\n",
     "state[6:9] = sf\n",
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +168,7 @@
        "Text(0.5, 0, 'Time (s)')"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
