Add inertial navigation

--- a/MagPIE/inertial_navigation.ipynb
+++ b/MagPIE/inertial_navigation.ipynb
@@ -318,21 +318,19 @@
     "    return q_new\n",
     "\n",
     "\n",
-    "def EKF_gm(N, T, y_gyr, y_acc, y_mag, g, q_0, v_0, p_0, R_gyr, R_acc, R_mag, dipoles, moments, B, H):\n",
+    "def EKF_gm(N, T, y_gyr, y_acc, g, q_0, v_0, p_0, R_gyr, R_acc):\n",
     "    \"\"\"\n",
     "    Inputs:\n",
     "    - N: Number of samples\n",
     "    - T: Sampling time\n",
     "    - y_gyr: Gyroscope measurements, shape (3, N)\n",
     "    - y_acc: Accelerometer measurements, shape (3, N)\n",
-    "    - y_mag: Magnetometer measurements, shape (3, N)\n",
     "    - g: Gravity field, in world frame, shape (3,)\n",
     "    - q_0: Initial orientation (unit quaternion), shape (4,)\n",
     "    - v_0: Initial velocity, shape (3,)\n",
     "    - p_0: Initial position, shape (3,)\n",
     "    - R_gyr: Variance of gyroscope measurements, shape (3, 3)\n",
     "    - R_acc: Variance of accelerometer measurement, shape (3, 3)\n",
-    "    - R_mag: Variance of magnetometer measurement, shape (3, 3)\n",
     "\n",
     "    Outputs:\n",
     "    - p_hat: Position estimate, shape (3, N)\n",
@@ -362,12 +360,6 @@
     "\n",
     "    # EKF loop\n",
     "    for t in range(1, N):\n",
-    "        m = H(p_hat[:, t-1], dipoles, moments, B)\n",
-    "        \n",
-    "        # Skew-symmetric matrix for magnetic field\n",
-    "        mx = np.array([[0, -m[2], m[1]],\n",
-    "                       [m[2], 0, -m[0]],\n",
-    "                       [-m[1], m[0], 0]])\n",
     "        \n",
     "        # Dynamic state update\n",
     "        f_b_hat[:, t-1] = y_acc[:, t-1]\n",
@@ -393,18 +385,31 @@
     "            # Measurement covariance update\n",
     "            P[:, :, t] = P[:, :, t] - K_t @ S_t @ K_t.T\n",
     "        \n",
-    "        # Magnetometer measurement update\n",
-    "        H_t = quat2Rot(q_hat[:, t]).T @ mx\n",
-    "        S_t = H_t @ P[:, :, t] @ H_t.T + R_mag\n",
-    "        K_t = P[:, :, t] @ H_t.T @ np.linalg.inv(S_t)\n",
-    "        eps_t = y_mag[:, t] - quat2Rot(q_hat[:, t]).T @ m\n",
-    "        eta = K_t @ eps_t\n",
-    "        q_hat[:, t] = exp_q_L(eta, q_hat[:, t])\n",
-    "        \n",
     "        # Measurement covariance update\n",
     "        P[:, :, t] = P[:, :, t] - K_t @ S_t @ K_t.T\n",
     "    \n",
     "    return p_hat, v_hat, q_hat\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Noise parameters of virtual IMU\n",
+    "WN_av_x = 0.000545870920697456\n",
+    "WN_av_y = 0.000732408947905144\n",
+    "WN_av_z = 0.00027247747862729825\n",
+    "WN_wv_x = 2.342356204510843e-05\n",
+    "WN_wv_y = 2.322497487530326e-05\n",
+    "WN_wv_z = 1.9223825688587986e-05\n",
+    "RW_av_x = 2.5418984352868408e-05\n",
+    "RW_av_y = 1.3390504662724877e-05\n",
+    "RW_av_z = 0.0\n",
+    "RW_wv_x = 0.0\n",
+    "RW_wv_y = 0.0\n",
+    "RW_wv_z = 5.887466774039067e-07"
    ]
   },
   {
