--- a/MagPIE/inertial_navigation.ipynb
+++ b/MagPIE/inertial_navigation.ipynb
@@ -29,6 +29,13 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 123,
    "metadata": {},
    "outputs": [],
@@ -203,6 +210,9 @@
     "q_tango = np.array([-0.03402371,  0.70905124, -0.70409664, -0.01834794])\n",
     "p_tango = np.array([0, -0.1, 0])\n",
     "R_tango = R.from_quat(q_tango).as_matrix()\n",
+    "\n",
+    "# realsense\n",
+    "\n",
     "\n",
     "# IMUs\n",
     "positions = [np.array([0, 0, 0]), -P21, -P31, -P41, -P51, p_tango]\n",
