--- a/MagPIE/img_handler.ipynb
+++ b/MagPIE/img_handler.ipynb
@@ -9,9 +9,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "OpenCV: FFMPEG: tag 0x34363248/'H264' is not supported with codec id 27 and format 'mp4 / MP4 (MPEG-4 Part 14)'\n",
+      "OpenCV: FFMPEG: fallback to use tag 0x31637661/'avc1'\n",
+      "[ERROR:0@0.083] global cap_ffmpeg_impl.hpp:3133 open Could not find encoder for codec_id=27, error: Encoder not found\n",
+      "[ERROR:0@0.083] global cap_ffmpeg_impl.hpp:3211 open VIDEOIO/FFMPEG: Failed to initialize VideoWriter\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -55,7 +65,7 @@
     "    height, width, layers = frame.shape\n",
     "\n",
     "    # Define the codec and create a VideoWriter object\n",
-    "    fourcc = cv2.VideoWriter_fourcc(*'mp4v')  # Use 'XVID' for .avi files\n",
+    "    fourcc = cv2.VideoWriter_fourcc(*'H264')  # Use 'XVID' for .avi files\n",
     "    video_writer = cv2.VideoWriter(output_video, fourcc, fps, (width, height))\n",
     "\n",
     "    # Process each image and write to video\n",
@@ -71,9 +81,52 @@
     "# Example usage:\n",
     "image_folder = '/home/su/MagPIE/Talbot_UGV/magpie2Dataset_1/mav0/cam0/data' \n",
     "output_video = '/home/su/MagPIE/Talbot_UGV/magpie2Dataset_1/mav0/traj1_4x.mp4'\n",
-    "fps = 32\n",
+    "fps = 100\n",
     "\n",
     "images_to_video(image_folder, output_video, fps)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import subprocess\n",
+    "import os\n",
+    "\n",
+    "def images_to_video_ffmpeg(image_folder, output_video, fps):\n",
+    "\n",
+    "    # Ensure output folder exists\n",
+    "    if not os.path.exists(image_folder):\n",
+    "        print(\"Image folder does not exist.\")\n",
+    "        return\n",
+    "\n",
+    "    # Construct the ffmpeg command\n",
+    "    command = [\n",
+    "        'ffmpeg',\n",
+    "        '-framerate', str(fps),\n",
+    "        '-i', os.path.join(image_folder, 'image_%04d.png'),\n",
+    "        '-c:v', 'libx264',\n",
+    "        '-pix_fmt', 'yuv420p',\n",
+    "        output_video\n",
+    "    ]\n",
+    "\n",
+    "    try:\n",
+    "        # Run the ffmpeg command\n",
+    "        subprocess.run(command, check=True)\n",
+    "        print(f\"Video saved as {output_video}\")\n",
+    "    except subprocess.CalledProcessError as e:\n",
+    "        print(f\"Error occurred: {e}\")\n",
+    "    except FileNotFoundError:\n",
+    "        print(\"ffmpeg not found. Please install it and try again.\")\n",
+    "\n",
+    "# Example usage:\n",
+    "image_folder = '/home/su/MagPIE/Talbot_UGV/magpie2Dataset_1/mav0/cam0/data' \n",
+    "output_video = '/home/su/MagPIE/Talbot_UGV/magpie2Dataset_1/mav0/traj1_4x.mp4'\n",
+    "fps = 128\n",
+    "\n",
+    "images_to_video_ffmpeg(image_folder, output_video, fps)\n"
    ]
   },
   {
