--- a/MagPIE/img_handler.ipynb
+++ b/MagPIE/img_handler.ipynb
@@ -88,9 +88,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "ffmpeg version 4.2.7-0ubuntu0.1 Copyright (c) 2000-2022 the FFmpeg developers\n",
+      "  built with gcc 9 (Ubuntu 9.4.0-1ubuntu1~20.04.1)\n",
+      "  configuration: --prefix=/usr --extra-version=0ubuntu0.1 --toolchain=hardened --libdir=/usr/lib/x86_64-linux-gnu --incdir=/usr/include/x86_64-linux-gnu --arch=amd64 --enable-gpl --disable-stripping --enable-avresample --disable-filter=resample --enable-avisynth --enable-gnutls --enable-ladspa --enable-libaom --enable-libass --enable-libbluray --enable-libbs2b --enable-libcaca --enable-libcdio --enable-libcodec2 --enable-libflite --enable-libfontconfig --enable-libfreetype --enable-libfribidi --enable-libgme --enable-libgsm --enable-libjack --enable-libmp3lame --enable-libmysofa --enable-libopenjpeg --enable-libopenmpt --enable-libopus --enable-libpulse --enable-librsvg --enable-librubberband --enable-libshine --enable-libsnappy --enable-libsoxr --enable-libspeex --enable-libssh --enable-libtheora --enable-libtwolame --enable-libvidstab --enable-libvorbis --enable-libvpx --enable-libwavpack --enable-libwebp --enable-libx265 --enable-libxml2 --enable-libxvid --enable-libzmq --enable-libzvbi --enable-lv2 --enable-omx --enable-openal --enable-opencl --enable-opengl --enable-sdl2 --enable-libdc1394 --enable-libdrm --enable-libiec61883 --enable-nvenc --enable-chromaprint --enable-frei0r --enable-libx264 --enable-shared\n",
+      "  libavutil      56. 31.100 / 56. 31.100\n",
+      "  libavcodec     58. 54.100 / 58. 54.100\n",
+      "  libavformat    58. 29.100 / 58. 29.100\n",
+      "  libavdevice    58.  8.100 / 58.  8.100\n",
+      "  libavfilter     7. 57.100 /  7. 57.100\n",
+      "  libavresample   4.  0.  0 /  4.  0.  0\n",
+      "  libswscale      5.  5.100 /  5.  5.100\n",
+      "  libswresample   3.  5.100 /  3.  5.100\n",
+      "  libpostproc    55.  5.100 / 55.  5.100\n",
+      "Input #0, image2, from '/home/su/MagPIE/Talbot_UGV/magpie2Dataset_1/mav0/cam0/data/image_%04d.png':\n",
+      "  Duration: 00:00:16.58, start: 0.000000, bitrate: N/A\n",
+      "    Stream #0:0: Video: png, rgb24(pc), 1280x720, 128 fps, 120 tbr, 128 tbn, 128 tbc\n",
+      "Stream mapping:\n",
+      "  Stream #0:0 -> #0:0 (png (native) -> h264 (libx264))\n",
+      "Press [q] to stop, [?] for help\n",
+      "[libx264 @ 0x5578a656cb40] using cpu capabilities: MMX2 SSE2Fast SSSE3 SSE4.2 AVX FMA3 BMI2 AVX2\n",
+      "[libx264 @ 0x5578a656cb40] profile High, level 4.2\n",
+      "[libx264 @ 0x5578a656cb40] 264 - core 155 r2917 0a84d98 - H.264/MPEG-4 AVC codec - Copyleft 2003-2018 - http://www.videolan.org/x264.html - options: cabac=1 ref=3 deblock=1:0:0 analyse=0x3:0x113 me=hex subme=7 psy=1 psy_rd=1.00:0.00 mixed_ref=1 me_range=16 chroma_me=1 trellis=1 8x8dct=1 cqm=0 deadzone=21,11 fast_pskip=1 chroma_qp_offset=-2 threads=18 lookahead_threads=3 sliced_threads=0 nr=0 decimate=1 interlaced=0 bluray_compat=0 constrained_intra=0 bframes=3 b_pyramid=2 b_adapt=1 b_bias=0 direct=1 weightb=1 open_gop=0 weightp=2 keyint=250 keyint_min=25 scenecut=40 intra_refresh=0 rc_lookahead=40 rc=crf mbtree=1 crf=23.0 qcomp=0.60 qpmin=0 qpmax=69 qpstep=4 ip_ratio=1.40 aq=1:1.00\n",
+      "Output #0, mp4, to '/home/su/MagPIE/Talbot_UGV/magpie2Dataset_1/mav0/traj1_16x.mp4':\n",
+      "  Metadata:\n",
+      "    encoder         : Lavf58.29.100\n",
+      "    Stream #0:0: Video: h264 (libx264) (avc1 / 0x31637661), yuv420p, 1280x720, q=-1--1, 120 fps, 15360 tbn, 120 tbc\n",
+      "    Metadata:\n",
+      "      encoder         : Lavc58.54.100 libx264\n",
+      "    Side data:\n",
+      "      cpb: bitrate max/min/avg: 0/0/0 buffer size: 0 vbv_delay: -1\n",
+      "frame= 1966 fps= 86 q=33.0 size=    7424kB time=00:00:15.84 bitrate=3839.1kbits/s dup=0 drop=129 speed=0.691x    \r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Video saved as /home/su/MagPIE/Talbot_UGV/magpie2Dataset_1/mav0/traj1_16x.mp4\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "frame= 1991 fps= 85 q=-1.0 Lsize=    7842kB time=00:00:16.56 bitrate=3878.0kbits/s dup=0 drop=131 speed=0.707x    \n",
+      "video:7819kB audio:0kB subtitle:0kB other streams:0kB global headers:0kB muxing overhead: 0.293625%\n",
+      "[libx264 @ 0x5578a656cb40] frame I:11    Avg QP:26.38  size: 22784\n",
+      "[libx264 @ 0x5578a656cb40] frame P:634   Avg QP:29.22  size:  6238\n",
+      "[libx264 @ 0x5578a656cb40] frame B:1346  Avg QP:30.67  size:  2824\n",
+      "[libx264 @ 0x5578a656cb40] consecutive B-frames:  8.9%  2.1%  2.0% 87.0%\n",
+      "[libx264 @ 0x5578a656cb40] mb I  I16..4: 36.9% 49.6% 13.6%\n",
+      "[libx264 @ 0x5578a656cb40] mb P  I16..4:  1.5%  1.5%  0.2%  P16..4: 40.0%  4.2%  3.4%  0.0%  0.0%    skip:49.4%\n",
+      "[libx264 @ 0x5578a656cb40] mb B  I16..4:  0.1%  0.1%  0.0%  B16..8: 45.7%  1.1%  0.1%  direct: 0.4%  skip:52.5%  L0:46.8% L1:52.6% BI: 0.7%\n",
+      "[libx264 @ 0x5578a656cb40] 8x8 transform intra:47.0% inter:89.2%\n",
+      "[libx264 @ 0x5578a656cb40] coded y,uvDC,uvAC intra: 32.4% 36.7% 4.9% inter: 6.0% 10.5% 0.1%\n",
+      "[libx264 @ 0x5578a656cb40] i16 v,h,dc,p: 42% 34%  5% 19%\n",
+      "[libx264 @ 0x5578a656cb40] i8 v,h,dc,ddl,ddr,vr,hd,vl,hu: 18% 19% 27%  5%  6%  5% 10%  4%  7%\n",
+      "[libx264 @ 0x5578a656cb40] i4 v,h,dc,ddl,ddr,vr,hd,vl,hu: 31% 26% 16%  4%  4%  4%  7%  3%  4%\n",
+      "[libx264 @ 0x5578a656cb40] i8c dc,h,v,p: 63% 19% 16%  2%\n",
+      "[libx264 @ 0x5578a656cb40] Weighted P-Frames: Y:8.8% UV:1.9%\n",
+      "[libx264 @ 0x5578a656cb40] ref P L0: 53.1% 17.2% 21.9%  7.3%  0.4%\n",
+      "[libx264 @ 0x5578a656cb40] ref B L0: 81.2% 15.9%  2.9%\n",
+      "[libx264 @ 0x5578a656cb40] ref B L1: 91.4%  8.6%\n",
+      "[libx264 @ 0x5578a656cb40] kb/s:3860.48\n"
+     ]
+    }
+   ],
    "source": [
     "import subprocess\n",
     "import os\n",
@@ -123,7 +193,7 @@
     "\n",
     "# Example usage:\n",
     "image_folder = '/home/su/MagPIE/Talbot_UGV/magpie2Dataset_1/mav0/cam0/data' \n",
-    "output_video = '/home/su/MagPIE/Talbot_UGV/magpie2Dataset_1/mav0/traj1_4x.mp4'\n",
+    "output_video = '/home/su/MagPIE/Talbot_UGV/magpie2Dataset_1/mav0/traj1_16x.mp4'\n",
     "fps = 128\n",
     "\n",
     "images_to_video_ffmpeg(image_folder, output_video, fps)\n"
